para/preprocessor/parser/ParaPreProcessorParser.py
# Generated from ./ParaPreProcessor.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ParaPreProcessorParser ( Parser ):

    grammarFileName = "ParaPreProcessor.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [  ]

    symbolicNames = [ "<INVALID>", "Include", "Define", "Undefine", "If", 
                      "Else", "IfDefined", "IfNotDefined", "ElIfNotDefined", 
                      "ElIfDefined", "ElseIf", "EndIf", "Error", "Pragma", 
                      "Line", "Identifier", "LibStringLiteral", "StringLiteral", 
                      "DigitSequence", "AsmBlock", "Whitespace", "Newline", 
                      "NonPreProcessorItemSequence" ]

    RULE_compilationUnit = 0
    RULE_translationUnit = 1
    RULE_externalItem = 2
    RULE_nonPreProcessorItemSequence = 3
    RULE_preProcessorDirective = 4
    RULE_selectionPreProcessorDirective = 5
    RULE_startOfSelectionBlock = 6
    RULE_selectionDirectiveAlternatives = 7
    RULE_selectionElseDirective = 8
    RULE_selectionBlock = 9
    RULE_includeDirective = 10
    RULE_fileIncludeDirective = 11
    RULE_computedIncludeDirective = 12
    RULE_ifNotDefinedDirective = 13
    RULE_ifDefinedDirective = 14
    RULE_elIfNotDefinedDirective = 15
    RULE_elIfDefinedDirective = 16
    RULE_ifDirective = 17
    RULE_elIfDirective = 18
    RULE_elseDirective = 19
    RULE_endIfDirective = 20
    RULE_pragmaDirective = 21
    RULE_errorDirective = 22
    RULE_undefDirective = 23
    RULE_complexDefineDirective = 24
    RULE_libIncludeDirective = 25
    RULE_stringIncludeDirective = 26
    RULE_lineDirective = 27
    RULE_nonPreProcessorItem = 28
    RULE_anySequence = 29
    RULE_preProcessorEnd = 30

    ruleNames =  [ "compilationUnit", "translationUnit", "externalItem", 
                   "nonPreProcessorItemSequence", "preProcessorDirective", 
                   "selectionPreProcessorDirective", "startOfSelectionBlock", 
                   "selectionDirectiveAlternatives", "selectionElseDirective", 
                   "selectionBlock", "includeDirective", "fileIncludeDirective", 
                   "computedIncludeDirective", "ifNotDefinedDirective", 
                   "ifDefinedDirective", "elIfNotDefinedDirective", "elIfDefinedDirective", 
                   "ifDirective", "elIfDirective", "elseDirective", "endIfDirective", 
                   "pragmaDirective", "errorDirective", "undefDirective", 
                   "complexDefineDirective", "libIncludeDirective", "stringIncludeDirective", 
                   "lineDirective", "nonPreProcessorItem", "anySequence", 
                   "preProcessorEnd" ]

    EOF = Token.EOF
    Include=1
    Define=2
    Undefine=3
    If=4
    Else=5
    IfDefined=6
    IfNotDefined=7
    ElIfNotDefined=8
    ElIfDefined=9
    ElseIf=10
    EndIf=11
    Error=12
    Pragma=13
    Line=14
    Identifier=15
    LibStringLiteral=16
    StringLiteral=17
    DigitSequence=18
    AsmBlock=19
    Whitespace=20
    Newline=21
    NonPreProcessorItemSequence=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompilationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ParaPreProcessorParser.EOF, 0)

        def translationUnit(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.TranslationUnitContext,0)


        def getRuleIndex(self):
            return ParaPreProcessorParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)




    def compilationUnit(self):

        localctx = ParaPreProcessorParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ParaPreProcessorParser.Include) | (1 << ParaPreProcessorParser.Define) | (1 << ParaPreProcessorParser.Undefine) | (1 << ParaPreProcessorParser.If) | (1 << ParaPreProcessorParser.IfDefined) | (1 << ParaPreProcessorParser.IfNotDefined) | (1 << ParaPreProcessorParser.Error) | (1 << ParaPreProcessorParser.Pragma) | (1 << ParaPreProcessorParser.Line) | (1 << ParaPreProcessorParser.Identifier) | (1 << ParaPreProcessorParser.StringLiteral) | (1 << ParaPreProcessorParser.DigitSequence) | (1 << ParaPreProcessorParser.Whitespace) | (1 << ParaPreProcessorParser.Newline) | (1 << ParaPreProcessorParser.NonPreProcessorItemSequence))) != 0):
                self.state = 62
                self.translationUnit()


            self.state = 65
            self.match(ParaPreProcessorParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TranslationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def externalItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParaPreProcessorParser.ExternalItemContext)
            else:
                return self.getTypedRuleContext(ParaPreProcessorParser.ExternalItemContext,i)


        def getRuleIndex(self):
            return ParaPreProcessorParser.RULE_translationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTranslationUnit" ):
                listener.enterTranslationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTranslationUnit" ):
                listener.exitTranslationUnit(self)




    def translationUnit(self):

        localctx = ParaPreProcessorParser.TranslationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_translationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 67
                self.externalItem()
                self.state = 70 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ParaPreProcessorParser.Include) | (1 << ParaPreProcessorParser.Define) | (1 << ParaPreProcessorParser.Undefine) | (1 << ParaPreProcessorParser.If) | (1 << ParaPreProcessorParser.IfDefined) | (1 << ParaPreProcessorParser.IfNotDefined) | (1 << ParaPreProcessorParser.Error) | (1 << ParaPreProcessorParser.Pragma) | (1 << ParaPreProcessorParser.Line) | (1 << ParaPreProcessorParser.Identifier) | (1 << ParaPreProcessorParser.StringLiteral) | (1 << ParaPreProcessorParser.DigitSequence) | (1 << ParaPreProcessorParser.Whitespace) | (1 << ParaPreProcessorParser.Newline) | (1 << ParaPreProcessorParser.NonPreProcessorItemSequence))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExternalItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def preProcessorDirective(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.PreProcessorDirectiveContext,0)


        def nonPreProcessorItemSequence(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.NonPreProcessorItemSequenceContext,0)


        def Newline(self):
            return self.getToken(ParaPreProcessorParser.Newline, 0)

        def getRuleIndex(self):
            return ParaPreProcessorParser.RULE_externalItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExternalItem" ):
                listener.enterExternalItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExternalItem" ):
                listener.exitExternalItem(self)




    def externalItem(self):

        localctx = ParaPreProcessorParser.ExternalItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_externalItem)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ParaPreProcessorParser.Include, ParaPreProcessorParser.Define, ParaPreProcessorParser.Undefine, ParaPreProcessorParser.If, ParaPreProcessorParser.IfDefined, ParaPreProcessorParser.IfNotDefined, ParaPreProcessorParser.Error, ParaPreProcessorParser.Pragma, ParaPreProcessorParser.Line]:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.preProcessorDirective()
                pass
            elif token in [ParaPreProcessorParser.Identifier, ParaPreProcessorParser.StringLiteral, ParaPreProcessorParser.DigitSequence, ParaPreProcessorParser.Whitespace, ParaPreProcessorParser.NonPreProcessorItemSequence]:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.nonPreProcessorItemSequence()
                pass
            elif token in [ParaPreProcessorParser.Newline]:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.match(ParaPreProcessorParser.Newline)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NonPreProcessorItemSequenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nonPreProcessorItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParaPreProcessorParser.NonPreProcessorItemContext)
            else:
                return self.getTypedRuleContext(ParaPreProcessorParser.NonPreProcessorItemContext,i)


        def getRuleIndex(self):
            return ParaPreProcessorParser.RULE_nonPreProcessorItemSequence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNonPreProcessorItemSequence" ):
                listener.enterNonPreProcessorItemSequence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNonPreProcessorItemSequence" ):
                listener.exitNonPreProcessorItemSequence(self)




    def nonPreProcessorItemSequence(self):

        localctx = ParaPreProcessorParser.NonPreProcessorItemSequenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_nonPreProcessorItemSequence)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 77
                    self.nonPreProcessorItem()

                else:
                    raise NoViableAltException(self)
                self.state = 80 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PreProcessorDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def includeDirective(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.IncludeDirectiveContext,0)


        def selectionPreProcessorDirective(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.SelectionPreProcessorDirectiveContext,0)


        def complexDefineDirective(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.ComplexDefineDirectiveContext,0)


        def errorDirective(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.ErrorDirectiveContext,0)


        def pragmaDirective(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.PragmaDirectiveContext,0)


        def lineDirective(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.LineDirectiveContext,0)


        def undefDirective(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.UndefDirectiveContext,0)


        def getRuleIndex(self):
            return ParaPreProcessorParser.RULE_preProcessorDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPreProcessorDirective" ):
                listener.enterPreProcessorDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPreProcessorDirective" ):
                listener.exitPreProcessorDirective(self)




    def preProcessorDirective(self):

        localctx = ParaPreProcessorParser.PreProcessorDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_preProcessorDirective)
        try:
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ParaPreProcessorParser.Include]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.includeDirective()
                pass
            elif token in [ParaPreProcessorParser.If, ParaPreProcessorParser.IfDefined, ParaPreProcessorParser.IfNotDefined]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.selectionPreProcessorDirective()
                pass
            elif token in [ParaPreProcessorParser.Define]:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.complexDefineDirective()
                pass
            elif token in [ParaPreProcessorParser.Error]:
                self.enterOuterAlt(localctx, 4)
                self.state = 85
                self.errorDirective()
                pass
            elif token in [ParaPreProcessorParser.Pragma]:
                self.enterOuterAlt(localctx, 5)
                self.state = 86
                self.pragmaDirective()
                pass
            elif token in [ParaPreProcessorParser.Line]:
                self.enterOuterAlt(localctx, 6)
                self.state = 87
                self.lineDirective()
                pass
            elif token in [ParaPreProcessorParser.Undefine]:
                self.enterOuterAlt(localctx, 7)
                self.state = 88
                self.undefDirective()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectionPreProcessorDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def startOfSelectionBlock(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.StartOfSelectionBlockContext,0)


        def endIfDirective(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.EndIfDirectiveContext,0)


        def selectionDirectiveAlternatives(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParaPreProcessorParser.SelectionDirectiveAlternativesContext)
            else:
                return self.getTypedRuleContext(ParaPreProcessorParser.SelectionDirectiveAlternativesContext,i)


        def selectionElseDirective(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.SelectionElseDirectiveContext,0)


        def getRuleIndex(self):
            return ParaPreProcessorParser.RULE_selectionPreProcessorDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectionPreProcessorDirective" ):
                listener.enterSelectionPreProcessorDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectionPreProcessorDirective" ):
                listener.exitSelectionPreProcessorDirective(self)




    def selectionPreProcessorDirective(self):

        localctx = ParaPreProcessorParser.SelectionPreProcessorDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_selectionPreProcessorDirective)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.startOfSelectionBlock()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ParaPreProcessorParser.ElIfNotDefined) | (1 << ParaPreProcessorParser.ElIfDefined) | (1 << ParaPreProcessorParser.ElseIf))) != 0):
                self.state = 92
                self.selectionDirectiveAlternatives()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ParaPreProcessorParser.Else:
                self.state = 98
                self.selectionElseDirective()


            self.state = 101
            self.endIfDirective()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StartOfSelectionBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectionBlock(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.SelectionBlockContext,0)


        def ifDirective(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.IfDirectiveContext,0)


        def ifDefinedDirective(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.IfDefinedDirectiveContext,0)


        def ifNotDefinedDirective(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.IfNotDefinedDirectiveContext,0)


        def getRuleIndex(self):
            return ParaPreProcessorParser.RULE_startOfSelectionBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStartOfSelectionBlock" ):
                listener.enterStartOfSelectionBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStartOfSelectionBlock" ):
                listener.exitStartOfSelectionBlock(self)




    def startOfSelectionBlock(self):

        localctx = ParaPreProcessorParser.StartOfSelectionBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_startOfSelectionBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ParaPreProcessorParser.If]:
                self.state = 103
                self.ifDirective()
                pass
            elif token in [ParaPreProcessorParser.IfDefined]:
                self.state = 104
                self.ifDefinedDirective()
                pass
            elif token in [ParaPreProcessorParser.IfNotDefined]:
                self.state = 105
                self.ifNotDefinedDirective()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 108
            self.selectionBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectionDirectiveAlternativesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectionBlock(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.SelectionBlockContext,0)


        def elIfDirective(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.ElIfDirectiveContext,0)


        def elIfDefinedDirective(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.ElIfDefinedDirectiveContext,0)


        def elIfNotDefinedDirective(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.ElIfNotDefinedDirectiveContext,0)


        def getRuleIndex(self):
            return ParaPreProcessorParser.RULE_selectionDirectiveAlternatives

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectionDirectiveAlternatives" ):
                listener.enterSelectionDirectiveAlternatives(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectionDirectiveAlternatives" ):
                listener.exitSelectionDirectiveAlternatives(self)




    def selectionDirectiveAlternatives(self):

        localctx = ParaPreProcessorParser.SelectionDirectiveAlternativesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_selectionDirectiveAlternatives)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ParaPreProcessorParser.ElseIf]:
                self.state = 110
                self.elIfDirective()
                pass
            elif token in [ParaPreProcessorParser.ElIfDefined]:
                self.state = 111
                self.elIfDefinedDirective()
                pass
            elif token in [ParaPreProcessorParser.ElIfNotDefined]:
                self.state = 112
                self.elIfNotDefinedDirective()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 115
            self.selectionBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectionElseDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elseDirective(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.ElseDirectiveContext,0)


        def selectionBlock(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.SelectionBlockContext,0)


        def getRuleIndex(self):
            return ParaPreProcessorParser.RULE_selectionElseDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectionElseDirective" ):
                listener.enterSelectionElseDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectionElseDirective" ):
                listener.exitSelectionElseDirective(self)




    def selectionElseDirective(self):

        localctx = ParaPreProcessorParser.SelectionElseDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_selectionElseDirective)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.elseDirective()
            self.state = 118
            self.selectionBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectionBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nonPreProcessorItemSequence(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParaPreProcessorParser.NonPreProcessorItemSequenceContext)
            else:
                return self.getTypedRuleContext(ParaPreProcessorParser.NonPreProcessorItemSequenceContext,i)


        def Newline(self, i:int=None):
            if i is None:
                return self.getTokens(ParaPreProcessorParser.Newline)
            else:
                return self.getToken(ParaPreProcessorParser.Newline, i)

        def selectionPreProcessorDirective(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParaPreProcessorParser.SelectionPreProcessorDirectiveContext)
            else:
                return self.getTypedRuleContext(ParaPreProcessorParser.SelectionPreProcessorDirectiveContext,i)


        def getRuleIndex(self):
            return ParaPreProcessorParser.RULE_selectionBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectionBlock" ):
                listener.enterSelectionBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectionBlock" ):
                listener.exitSelectionBlock(self)




    def selectionBlock(self):

        localctx = ParaPreProcessorParser.SelectionBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_selectionBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ParaPreProcessorParser.Identifier) | (1 << ParaPreProcessorParser.StringLiteral) | (1 << ParaPreProcessorParser.DigitSequence) | (1 << ParaPreProcessorParser.Whitespace) | (1 << ParaPreProcessorParser.Newline) | (1 << ParaPreProcessorParser.NonPreProcessorItemSequence))) != 0):
                self.state = 122
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ParaPreProcessorParser.Identifier, ParaPreProcessorParser.StringLiteral, ParaPreProcessorParser.DigitSequence, ParaPreProcessorParser.Whitespace, ParaPreProcessorParser.NonPreProcessorItemSequence]:
                    self.state = 120
                    self.nonPreProcessorItemSequence()
                    pass
                elif token in [ParaPreProcessorParser.Newline]:
                    self.state = 121
                    self.match(ParaPreProcessorParser.Newline)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ParaPreProcessorParser.If) | (1 << ParaPreProcessorParser.IfDefined) | (1 << ParaPreProcessorParser.IfNotDefined))) != 0):
                self.state = 127
                self.selectionPreProcessorDirective()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fileIncludeDirective(self):
            return self.getTypedRuleContext(ParaPreProcessorParser.FileIncludeDirectiveContext,0)

